src/snapshots/pielang__test__check_synthesize_(the (→ Absurd Nat) (λ (nope) (ind-Absurd (the Absurd nope) Nat))).snap
---
source: src/test.rs
description: (the (→ Absurd Nat) (λ (nope) (ind-Absurd (the Absurd nope) Nat)))
expression: output
---
type: (Π ((x Absurd)) Nat)
expr: (λ (nope) (ind-Absurd nope Nat))
