src/snapshots/pielang__test__check_synthesize_(the Atom zero).snap
---
source: src/test.rs
description: (the Atom zero)
expression: output
---
error: expect a `Atom`, but get `Nat`
