src/snapshots/pielang__test__check_synthesize_(the Nat 0).snap
---
source: src/test.rs
description: (the Nat 0)
expression: "format!(\"type: {}\\nexpr: {}\\n\", dpp(&ty, &env), dpp(&e_o, &env))"
---
type: Nat
expr: 0
