src/snapshots/pielang__test__check_synthesize_(the Trivial 'a).snap
---
source: src/test.rs
description: "(the Trivial 'a)"
expression: output
---
error: expect a `Trivial`, but get `Atom`
