src/snapshots/pielang__test__parse_expression_'  btom.snap
---
source: src/test.rs
description: "'  btom"
expression: parser.parse(e)
---
Ok(
    Literal(
        Span(
            0,
            7,
        ),
        Atom(
            "btom",
        ),
    ),
)
