src/snapshots/pielang__test__parse_expression_'a.snap
---
source: src/test.rs
description: "'a"
expression: parser.parse(e)
---
Ok(
    Literal(
        Span(
            0,
            2,
        ),
        Atom(
            "a",
        ),
    ),
)
