src/snapshots/pielang__test__parse_expression_'atom.snap
---
source: src/test.rs
description: "'atom"
expression: parser.parse(e)
---
Ok(
    Literal(
        Span(
            0,
            5,
        ),
        Atom(
            "atom",
        ),
    ),
)
