src/snapshots/pielang__test__parse_expression_(Sigma ((x Nat)(y Nat)) (= Nat x y)).snap
---
source: src/test.rs
expression: "parser.parse(e).expect(\"parse expression\")"
---
SigmaExpr(
    Span(
        0,
        36,
    ),
    [
        (
            Symbol(
                Span(
                    9,
                    10,
                ),
                "x",
            ),
            Identifier(
                Span(
                    11,
                    14,
                ),
                "Nat",
            ),
        ),
        (
            Symbol(
                Span(
                    16,
                    17,
                ),
                "y",
            ),
            Identifier(
                Span(
                    18,
                    21,
                ),
                "Nat",
            ),
        ),
    ],
    List(
        Span(
            24,
            35,
        ),
        [
            Identifier(
                Span(
                    25,
                    26,
                ),
                "=",
            ),
            Identifier(
                Span(
                    27,
                    30,
                ),
                "Nat",
            ),
            Identifier(
                Span(
                    31,
                    32,
                ),
                "x",
            ),
            Identifier(
                Span(
                    33,
                    34,
                ),
                "y",
            ),
        ],
    ),
)
