src/snapshots/pielang__test__parse_expression_(lambda (x) x).snap
---
source: src/test.rs
description: (lambda (x) x)
expression: parser.parse(e)
---
Ok(
    LambdaExpr(
        Span(
            0,
            14,
        ),
        [
            Symbol(
                Span(
                    9,
                    10,
                ),
                "x",
            ),
        ],
        Identifier(
            Span(
                12,
                13,
            ),
            "x",
        ),
    ),
)
